[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "imitation"
version = "1.0.1"
description = "Implementation of modern reward and imitation learning algorithms."
authors = [
    {name = "Center for Human-Compatible AI and Google"}
]
license = {text = "MIT"}
requires-python = ">=3.8.0"
dependencies = [
    # Install with empty requirements, as we do not want to train models
    # but only use imitation as a library, all necessary requirements are already installed by other packages
]

[project.urls]
Homepage = "https://github.com/HumanCompatibleAI/imitation"

[tool.setuptools]
packages = {find = {where = ["src"]}}

[tool.setuptools.package-dir]
"" = "src"

[tool.setuptools.package-data]
imitation = ["py.typed", "scripts/config/tuned_hps/*.json"]